# plonkish

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: proof_system.rs  snark.rs  zero_check.rs
benchmark/: Cargo.toml
benchmark/benches/: proof_system.rs
benchmark/src/: espresso.rs  halo2.rs  lib.rs
benchmark/src/halo2/: circuit.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: zero_check.rs
hyperplonk/src/: lib.rs  snark.rs  util.rs
hyperplonk/src/piop/: sum_check.rs
hyperplonk/src/piop/sum_check/: vanilla.rs
hyperplonk/src/piop/sum_check/vanilla/: coeff.rs  eval.rs
hyperplonk/src/poly/: multilinear.rs
hyperplonk/src/snark/: hyperplonk.rs
hyperplonk/src/snark/hyperplonk/: preprocess.rs  util.rs
hyperplonk/src/snark/hyperplonk/frontend/: halo2.rs
hyperplonk/src/snark/hyperplonk/frontend/halo2/: circuit.rs  test.rs
hyperplonk/src/util/: arithmetic.rs  expression.rs
plonkish_backend/: Cargo.toml
plonkish_backend/benches/: pcs.rs  zero_check.rs
plonkish_backend/src/: accumulation.rs  backend.rs  folding.rs  frontend.rs  lib.rs  pcs.rs  piop.rs  poly.rs  util.rs
plonkish_backend/src/accumulation/: protostar.rs  sangria.rs
plonkish_backend/src/accumulation/protostar/: hyperplonk.rs  ivc.rs
plonkish_backend/src/accumulation/protostar/hyperplonk/: preprocessor.rs  prover.rs
plonkish_backend/src/accumulation/protostar/ivc/: halo2.rs
plonkish_backend/src/accumulation/protostar/ivc/halo2/: test.rs
plonkish_backend/src/accumulation/sangria/: hyperplonk.rs
plonkish_backend/src/backend/: hyperplonk.rs  unihyperplonk.rs
plonkish_backend/src/backend/hyperplonk/: folding.rs  preprocess.rs  preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/backend/hyperplonk/folding/: protostar.rs  sangria.rs
plonkish_backend/src/backend/hyperplonk/folding/protostar/: preprocessor.rs  prover.rs  verifier.rs
plonkish_backend/src/backend/hyperplonk/folding/protostar/verifier/: halo2.rs
plonkish_backend/src/backend/hyperplonk/folding/sangria/: preprocessor.rs  prover.rs  verifier.rs
plonkish_backend/src/backend/hyperplonk/frontend/: halo2.rs
plonkish_backend/src/backend/hyperplonk/frontend/halo2/: circuit.rs  test.rs
plonkish_backend/src/backend/unihyperplonk/: preprocessor.rs  prover.rs  verifier.rs
plonkish_backend/src/folding/: protostar.rs  sangria.rs
plonkish_backend/src/folding/protostar/: hyperplonk.rs  ivc.rs
plonkish_backend/src/folding/protostar/hyperplonk/: ivc.rs  preprocessor.rs  prover.rs
plonkish_backend/src/folding/protostar/hyperplonk/ivc/: halo2.rs
plonkish_backend/src/folding/protostar/ivc/: halo2.rs
plonkish_backend/src/folding/protostar/ivc/halo2/: test.rs
plonkish_backend/src/folding/sangria/: hyperplonk.rs
plonkish_backend/src/frontend/: halo2.rs
plonkish_backend/src/frontend/halo2/: chip.rs  circuit.rs  layouter.rs  test.rs
plonkish_backend/src/pcs/: multilinear.rs  multilinear_kzg.rs  univariate.rs  univariate_kzg.rs
plonkish_backend/src/pcs/multilinear/: brakedown.rs  gemini.rs  hyrax.rs  ipa.rs  kzg.rs  simulator.rs  zeromorph.rs
plonkish_backend/src/pcs/univariate/: hyrax.rs  ipa.rs  kzg.rs
plonkish_backend/src/piop/: gkr.rs  multilinear_eval.rs  sum_check.rs
plonkish_backend/src/piop/gkr/: fractional_sum.rs  fractional_sum_check.rs
plonkish_backend/src/piop/multilinear_eval/: ph23.rs
plonkish_backend/src/piop/multilinear_eval/ph23/: additive.rs
plonkish_backend/src/piop/sum_check/: classic.rs  vanilla.rs
plonkish_backend/src/piop/sum_check/classic/: coeff.rs  eval.rs
plonkish_backend/src/piop/sum_check/vanilla/: coeff.rs  eval.rs
plonkish_backend/src/poly/: multilinear.rs  univariate.rs
plonkish_backend/src/util/: arithmetic.rs  code.rs  expression.rs  hash.rs  parallel.rs  transcript.rs
plonkish_backend/src/util/arithmetic/: fft.rs  msm.rs
plonkish_backend/src/util/code/: brakedown.rs
plonkish_backend/src/util/expression/: evaluator.rs  relaxed.rs  rotate.rs
plonkish_backend/src/util/expression/evaluator/: hadamard.rs  quotient.rs
plonkish_backend/src/util/expression/rotate/: binary_field.rs  lexical.rs
src/: lib.rs  pcs.rs  piop.rs  plonk.rs  poly.rs  snark.rs  sum_check.rs  util.rs
src/pcs/: multilinear_kzg.rs  univariate_kzg.rs
src/piop/: sum_check.rs
src/piop/sum_check/: poly.rs  prover.rs  vanilla.rs  verifier.rs
src/piop/sum_check/vanilla/: coeff.rs  eval.rs
src/poly/: multilinear.rs  univariate.rs
src/snark/: hyperplonk.rs
src/snark/hyperplonk/: preprocess.rs  prover.rs  util.rs  verifier.rs
src/snark/hyperplonk/frontend/: halo2.rs
src/snark/hyperplonk/frontend/halo2/: circuit.rs  test.rs
src/sum_check/: poly.rs  prover.rs  verifier.rs
src/util/: arithmetic.rs  expression.rs  parallel.rs  timer.rs  transcript.rs
src/util/arithmetic/: bh.rs  msm.rs
