[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.0", package = "halo2curves" }
itertools = "0.10.5"
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand = "0.8"
rayon = "1.5.3"
sha3 = "0.10.6"
colored = { version = "2.0.0", optional = true }

# frontend-halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/export-more-fns", optional = true }

[features]
default = ["frontend-halo2"]
timer = ["dep:colored"]
sanity-check = []

frontend-halo2 = ["dep:halo2_proofs"]

[dev-dependencies]
criterion = "0.4.0"
