[package]
name = "plonkish_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves", features = ["derive_serde"] }
pasta_curves = { version = "0.5.0", features = ["serde"] }
generic-array = { version = "0.14.7", features = ["serde"] }
bitvec = "1.0.1"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-integer = "0.1.45"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha3 = "0.10.6"
poseidon = { git = "https://github.com/han0110/poseidon", branch = "feature/with-spec" }

# timer
ark-std = { version = "^0.4.0", default-features = false, optional = true }

# parallel
rayon = { version = "1.5.3", optional = true }

# frontend-halo2
halo2_proofs = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", optional = true }

[dev-dependencies]
paste = "1.0.11"
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }

[features]
default = ["parallel", "frontend-halo2"]

timer = ["dep:ark-std", "ark-std?/print-trace", "halo2_proofs?/print-trace"]
parallel = ["dep:rayon"]
frontend-halo2 = ["dep:halo2_proofs"]

benchmark = ["parallel"]
sanity-check = []

[[bench]]
name = "zero_check"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "pcs"
harness = false
required-features = ["benchmark"]
